# git-sync

./: .gitignore  Cargo.toml  build.sh  build_dev.sh  config.toml  create_config.sh  readme.md  symlink_local_dev.sh  wrapper.sh
mock/: run.sh
mock/gitlab/: projects-page1.json  projects-page3.json  users.json
mock/mappings/: projects-page2.json  projects-page3.json
src/: command.rs  command_executor.rs  config.rs  dolly.rs  git.rs  github.rs  gitlab.rs  list.rs  main.rs
