[package]
name = "gits"
version = "0.1.0"
edition = "2021"
[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "6.0.0"
toml = "0.8.20"
regex = "1.11.1"
skim = "0.16.0"
chrono = "0.4"
rouille = "3.6.2"
anyhow = "1.0.100"
[[bin]]
name = "gitlab_mock_server"
test = false
bench = false
[dev-dependencies]


